ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Detail__c/Crop_Detail__c.object-meta.xml
<CustomObject>
    <label>Crop Detail</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Crop Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crop Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>