ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Detail__c/fields/Crop_Cultivated_Year__c.field-meta.xml
<CustomField>
    <fullName>Crop_Cultivated_Year__c</fullName>
    <label>Crop Cultivated Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Last Year</fullName>
            </value>
            <value>
                <fullName>Current Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>