ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Detail__c/fields/Crop_Grown_in_acre__c.field-meta.xml
<CustomField>
    <fullName>Crop_Grown_in_acre__c</fullName>
    <label>Crop Grown in acre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>