ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Detail__c/fields/Crop_Master__c.field-meta.xml
<CustomField>
    <fullName>Crop_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Crop Master</label>
    <referenceTo>Crop_Master__c</referenceTo>
    <relationshipLabel>Crop Details</relationshipLabel>
    <relationshipName>Crop_Details</relationshipName>
    <type>Lookup</type>
</CustomField>