ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Detail__c/fields/Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>Crop_Type__c</fullName>
    <label>Crop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kharif</fullName>
            </value>
            <value>
                <fullName>Rabi</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>