ProdIND/ProdPrograms/force-app/main/default/objects/Crop_Detail__c/fields/Land_Survey_No__c.field-meta.xml
<CustomField>
    <fullName>Land_Survey_No__c</fullName>
    <label>Land Survey No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>